--- a/tools/schemacode/src/bidsschematools/render/templates/glossary.jinja
+++ b/tools/schemacode/src/bidsschematools/render/templates/glossary.jinja
@@ -17,7 +17,7 @@
 **Allowed values**: `{% for level in levels %}{{ level }}{% if not loop.last %}`, `{% endif %}{% endfor %}`
 {% endif %}
 
-"**Description**:
+**Description**:
 {{ obj_desc }}
 
 {% if reduced_obj_def %}
